ændret diverse til engelsk frem for dansk

--- a/Index.html
+++ b/Index.html
@@ -9,22 +9,22 @@
 <body>
 <div class="login animated">
     <div class="outline">
-        <h1>Log på Kantine<span style="color: #fda32b;">App</span></h1>
+        <h1>Welcome to FoodPax</h1>
         <form id="login">
-            <input class="username form-input" placeholder="Skriv dit brugernavn" required>
-            <input type="password" class="password form-input" placeholder="Skriv dit kodeord her" required>
+            <input class="username form-input" placeholder="Username" required>
+            <input type="password" class="password form-input" placeholder="Password" required>
             <button class="submit">Log in</button>
         </form>
     </div>
 </div>
-<button class="switch animated">Har du ikke en bruger?</button>
+<button class="switch animated">Create User</button>
 <div class="Opret">
     <div class="outline">
-        <h1>Opret dig på Kantine<span style="color: #fda32b;">App</span></h1>
+        <h1>User creation</h1>
         <form id="Opret">
-            <input class="username form-input" placeholder="Eks aabb99cd" required>
-            <input type="password" class="password form-input" placeholder="Skriv dit kodeord her" required>
-            <button class="submit">Opret dig</button>
+            <input class="username form-input" placeholder="Your username" required>
+            <input type="password" class="password form-input" placeholder="Your password" required>
+            <button class="submit">Submit</button>
         </form>
     </div>
 </div>
