sdk + små  ændringer

--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kantine App</title>
+    <title>FoodPax Delivery</title>
     <link href="css/animate.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
