--- a/staffMainPage.html
+++ b/staffMainPage.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 <nav class="animated slideInDown">
-    <h1>FoodPax</h1>
-    <h3 class="logout">Log out</h3>
+    <h1>Food<span style="color: #890505;">Pax</span></h1>
+    <h3 class="logout"><span style="color: #890505;">| Log out</span></h3>
 </nav>
 <section class="ordersContainer">
 
